Currently being used API.

--- a/api_trial_one/Gemfile
+++ b/api_trial_one/Gemfile
@@ -5,8 +5,8 @@ ruby '2.5.0'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.2'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+# Use pg as the database for Active Record
+gem 'pg'
 # Use Puma as the app server
 gem 'puma', '~> 3.11'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -14,7 +14,17 @@ gem 'puma', '~> 3.11'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
+gem 'bcrypt', '~> 3.1.7'
+
+# Manage JSON web tokens
+gem 'jwt'
+# For manipulating the JSON data
+gem 'k2_connect_ruby_api_gem', '~> 0.4.3'
+gem 'hashie'
+gem 'yajl-ruby'
+
+# YAJl-ruby for parsing
+# gem 'yajl-ruby', require: 'yajl'
 
 # Use ActiveStorage variant
 # gem 'mini_magick', '~> 4.8'
